fix scrollbar, decimals, representation

--- a/packages/rocketchat-livechat/client/stylesheets/livechat.less
+++ b/packages/rocketchat-livechat/client/stylesheets/livechat.less
@@ -694,8 +694,8 @@
 	flex-flow: column;
 	// width: 100%;
 	min-height: 300px;
-	height: ~"calc(100% - 275px)";
-	height: ~"-webkit-calc-height(100% - 275px)";
+	height: ~"calc(100% - 280px)";
+	height: ~"-webkit-calc-height(100% - 280px)";
 }
 
 .lc-analytics-flex-container {
@@ -715,7 +715,7 @@
 }
 
 .lc-chart-ov-content {
-	overflow: scroll;
+	overflow: auto;
 }
 
 .lc-analytics-chart-ov-col {
